Make sure the name is not overlapping with the value

--- a/assets/css/leaflet-map.scss
+++ b/assets/css/leaflet-map.scss
@@ -41,6 +41,7 @@
       .feature-list {
         list-style: none;
         margin-bottom: 5px;
+        padding-left: 0;
         li {
           position: relative;
           margin-top: 3px;
